--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ main{
     }
 }
 
+body{
+    background-color: rgb(215 , 215 , 215);
+}
+
 .box{
     display: inline-block;
     border-style: solid;
